add thread-functionality branch

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "inbox.app.privacysafe.io",
-  "version": "0.3.0",
+  "version": "0.2.3",
   "description": "Inbox App",
   "author": "3NSoft, Inc.",
   "license": "GPL-3.0",
@@ -42,7 +42,6 @@
     "@vitejs/plugin-vue": "5.2.3",
     "@vue/devtools": "7.7.5",
     "@vue/eslint-config-typescript": "14.1.3",
-    "@vuedx/typescript-plugin-vue": "0.7.6",
     "eslint": "9.15.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "2.31.0",
@@ -64,6 +63,7 @@
     "unplugin-vue-components": "0.27.4",
     "vite": "6.3.3",
     "vite-plugin-vue-devtools": "^7.7.5",
+    "vue-eslint-parser": "^10.1.3",
     "vue-tsc": "2.2.10"
   },
   "packageManager": "pnpm@10.10.0"
