--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@vitejs/plugin-vue": "5.2.3",
     "@vue/devtools": "7.7.5",
     "@vue/eslint-config-typescript": "14.1.3",
+    "@vuedx/typescript-plugin-vue": "^0.7.6",
     "eslint": "9.15.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "2.31.0",
