--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "inbox.app.privacysafe.io",
-  "version": "0.3.7",
+  "version": "0.3.10",
   "description": "Inbox App",
   "author": "3NSoft, Inc.",
   "license": "GPL-3.0",
@@ -20,51 +20,50 @@
     "test:watch": "pnpm run clean:coverage && jest --watch"
   },
   "dependencies": {
-    "@v1nt1248/3nclient-lib": "0.2.6",
+    "@v1nt1248/3nclient-lib": "0.2.7",
     "dayjs": "1.11.13",
     "lodash": "4.17.21",
     "pinia": "3.0.2",
-    "sanitize-html": "^2.16.0",
-    "squire-rte": "^2.3.2",
-    "vue": "3.5.13",
-    "vue-router": "4.5.0",
-    "vue3-touch-events": "^5.0.13"
+    "sanitize-html": "^2.17.0",
+    "squire-rte": "^2.3.3",
+    "vue": "3.5.15",
+    "vue-router": "4.5.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.15.0",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.27.0",
     "@testing-library/vue": "8.1.0",
-    "@types/jasmine": "5.1.4",
-    "@types/lodash": "4.17.14",
-    "@types/node": "20.17.12",
-    "@types/sanitize-html": "^2.15.0",
-    "@typescript-eslint/eslint-plugin": "8.14.0",
-    "@typescript-eslint/parser": "8.14.0",
-    "@vitejs/plugin-vue": "5.2.3",
-    "@vue/devtools": "7.7.5",
-    "@vue/eslint-config-typescript": "14.1.3",
+    "@types/jasmine": "5.1.8",
+    "@types/lodash": "4.17.17",
+    "@types/node": "20.17.52",
+    "@types/sanitize-html": "^2.16.0",
+    "@typescript-eslint/eslint-plugin": "8.33.0",
+    "@typescript-eslint/parser": "8.33.0",
+    "@vitejs/plugin-vue": "5.2.4",
+    "@vue/devtools": "7.7.6",
+    "@vue/eslint-config-typescript": "14.5.0",
     "@vuedx/typescript-plugin-vue": "^0.7.6",
-    "eslint": "9.15.0",
+    "eslint": "9.27.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-promise": "7.1.0",
-    "eslint-plugin-vue": "9.31.0",
-    "globals": "^15.12.0",
+    "eslint-plugin-prettier": "^5.4.0",
+    "eslint-plugin-promise": "7.2.1",
+    "eslint-plugin-vue": "9.33.0",
+    "globals": "^15.15.0",
     "postcss-html": "1.8.0",
     "prettier": "^3.5.3",
-    "sass": "1.87.0",
-    "stylelint": "16.10.0",
+    "sass": "1.89.0",
+    "stylelint": "16.19.1",
     "stylelint-config-recommended-scss": "14.1.0",
-    "stylelint-config-recommended-vue": "1.5.0",
+    "stylelint-config-recommended-vue": "1.6.0",
     "stylelint-config-standard": "36.0.1",
-    "stylelint-scss": "6.9.0",
+    "stylelint-scss": "6.12.0",
     "typescript": "5.8.3",
-    "typescript-eslint": "^8.14.0",
-    "unplugin-vue-components": "0.27.4",
-    "vite": "6.3.3",
-    "vite-plugin-vue-devtools": "^7.7.5",
+    "typescript-eslint": "^8.33.0",
+    "unplugin-vue-components": "0.28.0",
+    "vite": "6.3.5",
+    "vite-plugin-vue-devtools": "^7.7.6",
     "vue-eslint-parser": "^10.1.3",
     "vue-tsc": "2.2.10"
   },
