--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,14 @@
 {
   "name": "Inbox",
   "appDomain": "inbox.app.privacysafe.io",
-  "version": "0.3.12",
-  "description": "Mail app",
+  "version": "0.3.17",
+  "description": "Send and receive encrypted messages with an improved version of email.",
   "icon": "logo.png",
   "components": {
     "/index.html": {
       "startedBy": "user",
       "runtime": "web-gui",
+      "formFactor": [ "desktop", "tablet" ],
       "capsRequested": {
         "apps": "opener",
         "logout": "all",
@@ -26,17 +27,11 @@
             "otherApps": {
               "launcher.app.privacysafe.io": "ui-settings"
             }
-          }
+          },
+          "openDashboard": true
         },
         "storage": {
-          "appFS": [
-            {
-              "domain": "inbox.app.privacysafe.io",
-              "storage": "synced-n-local"
-            }
-          ],
-          "userFS": "all",
-          "sysFS": "all"
+          "appFS": "default"
         },
         "otherAppsRPC": [
           {
@@ -62,6 +57,7 @@
     "/index-mobile.html": {
       "startedBy": "user",
       "runtime": "web-gui",
+      "formFactor": "phone",
       "capsRequested": {
         "apps": "opener",
         "logout": "all",
@@ -80,17 +76,11 @@
             "otherApps": {
               "launcher.app.privacysafe.io": "ui-settings"
             }
-          }
+          },
+          "openDashboard": true
         },
         "storage": {
-          "appFS": [
-            {
-              "domain": "inbox.app.privacysafe.io",
-              "storage": "synced-n-local"
-            }
-          ],
-          "userFS": "all",
-          "sysFS": "all"
+          "appFS": "default"
         },
         "otherAppsRPC": [
           {
@@ -99,14 +89,6 @@
           }
         ]
       },
-      "windowOpts": {
-        "width": 360,
-        "height": 768,
-        "minWidth": 360,
-        "minHeight": 768,
-        "maxWidth": 360,
-        "maxHeight": 768
-      },
       "startCmds": {
         "open-inbox-with": {
           "otherApps": "*"
@@ -114,18 +96,19 @@
       }
     }
   },
+
   "launchers": [
     {
       "name": "Inbox",
       "icon": "logo.png",
-      "description": "Mail app",
+      "description": "Send and receive encrypted messages with an improved version of email.",
       "component": "/index.html",
       "formFactor": [ "desktop", "tablet" ]
     },
     {
       "name": "Inbox",
       "icon": "logo.png",
-      "description": "Mail app",
+      "description": "Send and receive encrypted messages with an improved version of email.",
       "component": "/index-mobile.html",
       "formFactor": "phone"
     }
